# rust-code-challenge

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  string-conversion.rs
src/d0/: _125_valid_palindrome.rs  _136_single_number.rs  _169_majority_element.rs  _190_reverse_bits.rs  _191_number_of_1_bits.rs  _1_two_sum.rs  _217_contains_duplicate.rs  _242_valid_anagram.rs  _258_add_digits.rs  _268_missing_number.rs  _26_remove_duplicates_from_sorted_array.rs  _27_remove_element.rs  _283_move_zeros.rs  _28_find_index.rs  _2_add_two_numbers.rs  _344_reverse_string.rs  _34_find_first_and_last_position_of_elements_in_sorted_array.rs  _35_search_insert_position.rs  _3_longest_substring_without_repeating_characters.rs  _412_fizz_buzz.rs  _509_fibonacci.rs  _53_maximum_subarray.rs  _58_length_of_last_word.rs  _66_plus_one.rs  _67_add_binary.rs  _69_sqrt.rs  _70_climbing_stairs.rs  _71_simplify_path.rs  _75_sort_colors.rs  _7_reverse_integer.rs  _88_merge_sorted_array.rs  _89_gray_code.rs  _8_string_to_integer.rs  _9_palindrome_number.rs  _a1_arrays.rs  _a1_vector.rs  _a2_vec_enum.rs  _a2_vector.rs  _a3_error_handling.rs  _a4_options.rs  (+8 more)
