[package]
name = "rust-code-challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.64"
anyhow = "1.0.89"
rand = "0.8.5"
assert_approx_eq = "1.1.0"
struct_iterable = "0.1.1"
paste = "1.0.15"
pretty_assertions = "1.4.1"
threadpool = "1.8.1"
log = "0.4.22"
simple_logger = "5.0.0"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
